--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ container for the response-feedback (start with alert)
 -->
 </head>
 <body>
-
-<div class="container-main">
-  <header>My Cruddy App</header>
-  <div class="container-form">
-    <input type="text" class="input-key" placeholder="enter key">
-    <input type="text" class="input-value" placeholder="enter value">
-    <button class="btn-add">Submit</button>
-    <button class="btn-update">Update</button>
-    <button class="btn-delete">Delete</button>
-    <button class="btn-clear">Clear</button>
+  <div class="container-main">
+    <header>My Cruddy App</header>
+    <div class="container-form">
+      <input type="text" class="input-key" placeholder="enter key">
+      <input type="text" class="input-value" placeholder="enter value">
+      <button class="btn-add">Submit</button>
+      <button class="btn-update">Update</button>
+      <button class="btn-delete">Delete</button>
+      <button class="btn-clear">Clear</button>
+    </div>
+    <div class="container-data"></div>
   </div>
-  <div class="container-data"></div>
-</div>
+  <img src="./images/blackjack-table-top-view-vector-20671311.jpg" alt="BlackJack-table">
 
 </body>
 </html>
